<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.david.namantert.Comprar">

    <LinearLayout
        android:layout_width="399dp"
        android:layout_height="585dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="373dp"
                android:layout_height="wrap_content"
                android:fontFamily="serif-monospace"
                android:text="@string/ingreseCliente"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp">

                <EditText
                    android:id="@+id/txtCedula"
                    android:layout_width="179dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.32"
                    android:ems="10"
                    android:hint="@string/cedula"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/txtNombre"
                    android:layout_width="173dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/nombre"
                    android:inputType="textPersonName"
                    android:textAlignment="textStart" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txtApellido"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/apellido"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/txtTelefono"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/telefono"
                    android:inputType="number" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="3dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

            <LinearLayout
                android:layout_width="371dp"
                android:layout_height="34dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    android:id="@+id/btnBuscar"
                    android:layout_width="115dp"
                    android:layout_height="35dp"
                    android:text="@string/buscar"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/btnBorrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.45"
                    android:text="@string/borrar" />

                <Button
                    android:id="@+id/btnAceptar"
                    android:layout_width="112dp"
                    android:layout_height="35dp"
                    android:text="@string/aceptar" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/btnModificar"
                android:layout_width="141dp"
                android:layout_height="33dp"
                android:text="@string/modificar" />

            <Button
                android:id="@+id/btnEliminar"
                android:layout_width="124dp"
                android:layout_height="33dp"
                android:text="@string/eliminar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ListView
                android:id="@+id/lvCliente"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
