<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.david.namantert.RegistrarCliente">

    <LinearLayout
        android:layout_width="356dp"
        android:layout_height="496dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="14dp"
        tools:layout_editor_absoluteY="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtCedulaCliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/cedula"
                android:inputType="number" />

            <Button
                android:id="@+id/btnBuscar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.18"
                android:onClick="buscar"
                android:text="@string/buscar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtNombreCliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/nombre"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txtApellidoCliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/apellido"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtTelefonoCliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/telefono"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAgregar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="guardar"
                android:text="@string/agregar"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btnEliminar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="eliminar"
                android:text="@string/eliminar"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btnModificar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="modificar"
                android:text="@string/modificar"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btnCompra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/compra"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableLayout
                    android:id="@+id/tblCliente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView14"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cedula"
                            android:textAppearance="@style/TextAppearance.AppCompat"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView15"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nombre"
                            android:textAppearance="@style/TextAppearance.AppCompat"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/telefono"
                            android:textAppearance="@style/TextAppearance.AppCompat"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView16"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/apellido"
                            android:textAppearance="@style/TextAppearance.AppCompat"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </TableRow>
                </TableLayout>
            </ScrollView>
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
